optimize: 引入规范样式变量，所有页面统一

--- a/src/styles/variable.less
+++ b/src/styles/variable.less
@@ -1,9 +1,11 @@
 // Variables
 // 文字颜色
-@T1:    #475266;
-@T2:    #878D99;
-@T3:    #2C2F37;
-@T4:    #E56A67;
+@T1:    #333333;
+@T2:    #353535;
+@T3:    #999999;
+@T4:    #CBCBCB;
+@T5:    #B1BDCD;
+@T6:    #B9BDC2;
 
 // 背景颜色
 @B1:    #fff;
@@ -11,11 +13,14 @@
 @B3:    #6595F4;
 @B4:    #F1BA5C;
 @B5:    #9CBDFF;
+@B6:    #F3F6F9;
+@B7:    #F3F5F6;
 
 // 线条颜色
 @L1:    #EDEFF0;
 @L2:    #CBCBCB;
 @L3:    #E3E5E6;
+@L4:    #F2F2F2;
 
 // 阴影颜色
 @S1:    #779CE6;
