feat: 【15.莒县新闻】页面样式完成; optimize: 统一页面字体样式变量

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -26,7 +26,7 @@ button.weui-btn {
   height: 1rem;
   .ell;
   border-radius: 0;
-  font-family: PingFangSC-Regular;
+  font-family: @FR;
   font-size: .32rem;
   letter-spacing: 0;
   &::after {
@@ -74,7 +74,7 @@ button.weui-btn {
   .weui-cell {
     padding: .4rem;
     font-size: .32rem;
-    font-family: PingFangSC-Regular;
+    font-family: @FR;
     color: @T1;
     &:before {
       left: .4rem;
@@ -91,7 +91,7 @@ button.weui-btn {
     }
   }
   .weui-textarea {
-    font-family: PingFangSC-Regular;
+    font-family: @FR;
     font-size: .32rem;
     color: @T2;
     letter-spacing: -0.1px;
