feat: 【服务详情&预约拨号弹窗】页面样式完成 feat: 添加路由跳转：【便民服务】>【家政服务】>【上门维修】>【服务详情】

--- a/src/styles/variable.less
+++ b/src/styles/variable.less
@@ -27,5 +27,13 @@
 @S2:    #ADBCD9;
 @S3:    #5C6373;
 
+// 按钮颜色
+@C1:    #067BF8;
+@C2:    #FFB853;
+@C3:    #F37D31;
+@C4:    #F05A23;
+@C5:    #FFAC5E;
+@C6:    #4AB4FE;
+
 @FM:    PingFangSC-Medium;
 @FR:    PingFangSC-Regular;
