feat：完成投诉建议

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -72,7 +72,7 @@ button.weui-btn {
 
 .weui-cells {
   .weui-cell {
-    padding: .4rem;
+    padding: .4rem .24rem;
     font-size: .32rem;
     font-family: @FR;
     color: @T1;
@@ -86,7 +86,7 @@ button.weui-btn {
       &:after {
         width: 10px;
         height: 10px;
-        border-color: #9CBDFF;
+        //border-color: #9CBDFF;
       }
     }
   }
