--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -86,6 +86,7 @@ button.weui-btn {
       &:after {
         width: 10px;
         height: 10px;
+        margin-top: -6px;
         //border-color: #9CBDFF;
       }
     }
